--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,14 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-requests = "*"
+requests = "==2.25.1"
+certifi = "==2020.12.5"
+chardet = "==4.0.0"
+dnspython = "==2.1.0"
+idna = "==2.10"
+urllib3 = "==1.26.4"
+python-dotenv = "*"
+autopep8 = "*"
 
 [dev-packages]
 
